Fixed alignment on homepage.

--- a/frontend/src/app/_style/index.css
+++ b/frontend/src/app/_style/index.css
@@ -78,4 +78,8 @@
   .wide-cards {
     --spacing-listitem-card: min(100%, var(--spacing-listitem-card-wide));
   }
+
+  .full-cards {
+    --spacing-listitem-card: 100%;
+  }
 }
